color contrast corrected

--- a/lesson02/styles/design.css
+++ b/lesson02/styles/design.css
@@ -32,8 +32,8 @@ article p {
 }
 
 .callout {
-    color: #777;
-    background-color: #702963;
+    color: #ffffff;
+    background-color: #58134c;
     padding: 1rem;
 }
 
